src/parser/snapshots/protols__parser__hover__test__hover-3.snap
---
source: src/parser/hover.rs
expression: res
---
- "This is represents author\nA author is a someone who writes books\n\nAuthor has a name and a country where they were born"
