src/parser/snapshots/protols__parser__hover__test__test_package_duplicate_hover.snap
---
source: src/parser/hover.rs
expression: results
---
- target: "Test [definition]"
  hover:
    contents:
      kind: markdown
      value: "```protobuf\ncom.syntax.modern.Test\nmessage Test\n```"
    range:
      start:
        line: 5
        character: 8
      end:
        line: 5
        character: 12
- target: "name [definition]"
  hover:
    contents:
      kind: markdown
      value: "```protobuf\ncom.syntax.modern.Test.name\nstring name = 1;\n```"
    range:
      start:
        line: 6
        character: 9
      end:
        line: 6
        character: 13
- target: "name [type_use]"
  hover:
    contents:
      kind: markdown
      value: "`string`\n\n---\n\n**Built-in Type**\n\nA string of text.\n\n**Details:**\n\n- **Wire format**: Length-delimited.\n- **Encoding**: Must always contain UTF-8 encoded or 7-bit ASCII text. Use `bytes` if you need to store arbitrary binary data or other encodings.\n- **Capacity**: Stores at most 4 GiB of text.\n- **Go type**: `string`\n- **C++ type**: `std::string`\n- **Rust type**: `::std::string::String`\n"
    range:
      start:
        line: 6
        character: 2
      end:
        line: 6
        character: 8
